--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
-h1 {
-  color: aliceblue;
+header {
+  background-color: #3498db;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
+
+.logo {
+  width: 76px;
+  height: 20px;
+  color: #6070FF;
+  font-family: 'Poppins', sans-serif; 
+  font-size: 18px;
+  font-weight: 700; 
+  line-height: 20px;
+  letter-spacing: 0; 
+  text-align: center;
+}
+.hamburger-button {
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.line {
+  width: 100%;
+  height: 6px;
+  background-color: #000;
+  border-radius: 4px;
+}
+
+
+
+
+
