--- a/style.css
+++ b/style.css
@@ -1,4 +1,47 @@
-header {
+.container {
+  max-width: 375px;
+  padding: 10px;
+}
+
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  background-color: #fff;
+  color: #000;
+  padding: 10px;
+}
+
+.logo {
+  width: hug (100px);
+  height: hug (40px);
+  top: 4px;
+  left: 12px;
+  padding: 10px, 12px, 10px, 12px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0;
+  text-align: center;
+  color: #6070ff;
+}
+
+/* Styling for the hamburger button */
+.hamburger {
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.hamburger div {
+  width: 20px; /* Reduce width to fit */
+  height: 2px; /* Adjust height */
+  background-color: #6070ff;
+  margin: 3px 0;
+  border-radius: 2px;
+}
+
+/* header {
   background-color: #3498db;
   color: #fff;
   display: flex;
@@ -6,16 +49,15 @@ header {
   align-items: center;
   padding: 10px 20px;
 }
-
 .logo {
   width: 76px;
   height: 20px;
   color: #6070FF;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
-  font-weight: 700; 
+  font-weight: 700;
   line-height: 20px;
-  letter-spacing: 0; 
+  letter-spacing: 0;
   text-align: center;
 }
 .hamburger-button {
@@ -30,15 +72,10 @@ header {
   border: none;
   cursor: pointer;
 }
-
 .line {
   width: 100%;
   height: 6px;
   background-color: #000;
   border-radius: 4px;
 }
-
-
-
-
-
+*/
