--- a/style.css
+++ b/style.css
@@ -79,17 +79,15 @@
   gap: 8px;
   margin-top: 20px;
 }
+
 .grid-container {
   max-width: 375px;
-
   top: 718px;
-  background: #F7F7F9;
-
-  padding: 114px 24px 114px 24px; 
+  background: #f7f7f9;
+  padding: 114px 24px 114px 24px;
   gap: 88px;
   display: grid;
-  border: 2px solid  rgba(115, 114, 118, 0.043); 
-  
+  border: 2px solid  rgba(115, 114, 118, 0.043);
 }
 
 .card {
@@ -97,186 +95,187 @@
   height: 552px;
   padding: 5px;
   border-radius: 16px;
-  color: #FFFFFF;
+  color: #fff;
   display: flex;
   flex-direction: column;
   align-content: center;
   gap: 12px;
   border: 1px solid rgba(223, 225, 230, 1);
-  background: linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(0deg, #DFE1E6, #DFE1E6);
+  background: linear-gradient(0deg, #fff, #fff), linear-gradient(0deg, #dfe1e6, #dfe1e6);
   margin-left: -10px;
 }
-.cardtwo{
-max-width:327px;
-height: 596px;
-padding: 16px;
-border-radius: 16px;
-gap: 12px;
-align-content: center;
-color: #FFFFFF;
-border: 1px solid rgba(223, 225, 230, 1);
-background: linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(0deg, #DFE1E6, #DFE1E6);
-margin-left: -10px;
+
+.cardtwo {
+  max-width: 327px;
+  height: 596px;
+  padding: 16px;
+  border-radius: 16px;
+  gap: 12px;
+  align-content: center;
+  color: #fff;
+  border: 1px solid rgba(223, 225, 230, 1);
+  background: linear-gradient(0deg, #fff, #fff), linear-gradient(0deg, #dfe1e6, #dfe1e6);
+  margin-left: -10px;
 }
 
-.imagecontainer{
+.imagecontainer {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 13px;
 }
-.snapshot{
+
+.snapshot {
   width: 295px;
-height: 220px;
-border-radius: 8px;
+  height: 220px;
+  border-radius: 8px;
 }
 
-.Title{
-  width: 295px;
-height: 36px;
-font-family: Poppins;
-font-size: 32px;
-font-weight: 700;
-line-height: 44px;
-letter-spacing: 0em;
-text-align: start;
-color: #172B4D;
-margin-top: -5px;
-margin-left: 10px;
-
-}
-.Title1{
+.Title {
   width: 295px;
   height: 36px;
-  font-family: Poppins;
+  font-family: Poppins, sans-serif;
   font-size: 32px;
   font-weight: 700;
   line-height: 44px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: start;
-  color: #172B4D;
-  margin-top: 10px;
- 
+  color: #172b4d;
+  margin-top: -5px;
+  margin-left: 10px;
+}
 
-}
-.Block{
-  width: Hug (295px);
-  height: Hug (80px);
-  gap: 12px;
-}
-.layout{
+.Title1 {
   width: 295px;
-height: 80px;
-gap: 12px;
+  height: 36px;
+  font-family: Poppins, sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: 0;
+  text-align: start;
+  color: #172b4d;
+  margin-top: 10px;
 }
-.Frame{
-  width: Hug (236px);
-  height: Hug (32px);
+
+.Block {
+  width: hug (295px);
+  height: hug (80px);
   gap: 12px;
-margin-left: 10px;
-margin-top: -10px;
 }
-.Frame2{
+
+.layout {
+  width: 295px;
+  height: 80px;
+  gap: 12px;
+}
+
+.Frame {
+  width: hug (236px);
+  height: hug (32px);
+  gap: 12px;
+  margin-left: 10px;
+  margin-top: -10px;
+}
+
+.Frame2 {
   width: 236px;
   height: 32px;
   gap: 12px;
   margin-top: 60px;
- margin-left: 6px;
+  margin-left: 6px;
 }
-.firstText{
+
+.firstText {
   width: 295px;
-height: 76px;
-font-style: Body / 3;
-font-family: Poppins;
-font-size: 15px;
-font-weight: 400;
-line-height: 24px;
-margin-top: 12px;
-letter-spacing: 0em;
-margin-left: 10px;
-color:#344563;
+  height: 76px;
+  font-style: body / 3;
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 12px;
+  letter-spacing: 0;
+  margin-left: 10px;
+  color: #344563;
 }
 
-.tags{
- width: 214px;
-height: 24px;
-gap: 8px;
-margin-top: 10px;
-margin-left: 10px;
-
+.tags {
+  width: 214px;
+  height: 24px;
+  gap: 8px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
-.Action{
+.Action {
   width: 295px;
   height: 72px;
-  padding: 12px, 169px, 12px, 0px;
-  
+  padding: 12px, 169px, 12px, 0;
 }
 
-.button{
-  width: Hug (126px);
-  height: Hug (48px);
+.button {
+  width: hug (126px);
+  height: hug (48px);
   top: 12px;
   padding: 12px;
   border-radius: 8px;
-  margin-top:25px;
-  border: 1px solid #6070FF;
+  margin-top: 25px;
+  border: 1px solid #6070ff;
   display: inline-block;
   margin-left: 10px;
 }
-.buttontext{
+
+.buttontext {
   width: 102px;
   height: 24px;
-   font-style: Button /Normal;
-    font-family: Poppins;
-    font-size: 17px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    text-align: center;
-    color:#396DF2;
-    
-    
+  font-style: button /normal;
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #396df2;
 }
 
-/**/
-
-.about-me{
+.about-me {
   max-width: 375px;
   top: 3506px;
   padding: 114px 24px 114px 24px;
   gap: 24px;
   margin-bottom: 180px;
   height: 1062.15px;
-
 }
 
-.content-wrapper{
+.content-wrapper {
   max-width: 327px;
-  max-height:346px;
+  max-height: 346px;
   gap: 12px;
   margin: auto;
-  /* margin-bottom: 180px; */
 
+  /* margin-bottom: 180px; */
 }
-.section-title{
+
+.section-title {
   max-width: 327px;
   height: 35px;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 40px;
   font-weight: 700;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: left;
   color: rgba(23, 43, 77, 1);
-
 }
-.section-text{
+
+.section-text {
   margin-top: -15px;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
+
   /* text-align: left; */
   color: rgba(52, 69, 99, 1);
 }
@@ -297,15 +296,16 @@ margin-left: 10px;
 }
 
 .resume-button .button-text {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-size: 17px;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.03em;
   text-align: left;
   color: rgba(57, 109, 242, 1);
-  white-space: nowrap; 
+  white-space: nowrap;
 }
+
 .Button {
   max-width: 124px;
   height: 38px;
@@ -319,85 +319,83 @@ margin-left: 10px;
   align-items: center;
 }
 
-
 .Button .subtext {
   width: 138px;
   height: 24px;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-size: 17px;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.03em;
   text-align: center;
   color: rgba(57, 109, 242, 1);
-  
 }
 
-.skill-set{
+.skill-set {
   max-width: 327px;
   max-height: 464.15px;
   margin-top: 20px;
 }
-.lang{
-font-family: 'Poppins' , sans-serif;
-font-size: 20px;
-font-weight: 500;
-line-height: 24px;
-letter-spacing: 0em;
-text-align: left;
-color: rgba(0, 0, 0, 1);
-max-width: 327px;
-margin-left: 10px;
-height: 68px;
-display: flex; 
-align-items: center; 
-justify-content: space-between; 
 
+.lang {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
+  max-width: 327px;
+  margin-left: 10px;
+  height: 68px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.frame3{
+
+.frame3 {
   width: 327px;
-height: 144px;
-margin-top: 50px;
-align-items:center;
-
+  height: 144px;
+  margin-top: 50px;
+  align-items: center;
 }
 
-
-.langlist{
-  width:327px;
-height: 248.15px;
-gap: 12px;
-margin-bottom: 20px;
+.langlist {
+  width: 327px;
+  height: 248.15px;
+  gap: 12px;
+  margin-bottom: 20px;
 }
-.langtext{
+
+.langtext {
   color: rgba(37, 56, 88, 1);
-font-family: 'Poppins', sans-serif;
-font-size: 15px;
-font-weight: 500;
-line-height: 20px;
-letter-spacing: 0em;
-text-align: justify;
-width: 215px;
-height: 24px;
-top: 21px;
-left: 76px;
-display: inline;
-margin-left: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0;
+  text-align: justify;
+  width: 215px;
+  height: 24px;
+  top: 21px;
+  left: 76px;
+  display: inline;
+  margin-left: 10px;
 }
-.frame2{
-max-width: 303px;
-height: 66.72px;
-padding: 9px 12px 9.72px 12px;
-border-radius: 8px;
-background: rgba(247, 247, 249, 1);
-margin-bottom: 10px; 
 
-display: flex; 
-  align-items: center; 
-  margin-right: 10px; 
-
+.frame2 {
+  max-width: 303px;
+  height: 66.72px;
+  padding: 9px 12px 9.72px 12px;
+  border-radius: 8px;
+  background: rgba(247, 247, 249, 1);
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
-.image{
+
+.image {
   display: inline;
   width: 58px;
   height: 58px;
@@ -406,14 +404,11 @@ display: flex;
   border-radius: 27px;
   margin-top: 5px;
 }
+
 .line {
-max-width: 327px;
-max-height: 1px;
-top: 71px;
-background-color: rgba(223, 225, 230, 1);
-border-color:#ffffff ;
+  max-width: 327px;
+  max-height: 1px;
+  top: 71px;
+  background-color: rgba(223, 225, 230, 1);
+  border-color: #fff;
 }
-
-
-
-
