--- a/style.css
+++ b/style.css
@@ -412,3 +412,108 @@
   background-color: rgba(223, 225, 230, 1);
   border-color: #fff;
 }
+
+.contactcontainer{
+  width: 375px;
+  height: 795px;
+  top: 5410px;
+  background-color:  #6070FF;
+  background-image: url(/shapes.png),url(/Contact\ me.jpg);
+  background-size:  265px 709.17px  , cover; 
+  background-position: right, center center;
+  background-repeat: no-repeat, repeat;
+  
+
+}
+.contact{
+  color:  #FFFFFF;
+font-family: Poppins,sans-serif;
+font-size: 40px;
+font-weight: 700;
+line-height: 52px;
+letter-spacing: 0em;
+text-align: center;
+margin-top: -195px; 
+top: 4802px;
+}
+.contact-section{
+  width: 375px;
+  top: 4802px;
+  left: 24px;
+  margin-bottom: 5px;
+}
+.maintext{
+  font-family: 'Poppins',sans-serif;
+font-size: 20px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0em;
+text-align: center;
+color: #EBEBFF;
+width: 327px;
+height: 137px;
+top: 4802px;
+margin-left: 24px;
+display: flex;
+text-align: center;
+justify-content: center;
+margin-top: 135px;
+
+}
+.forminput{
+    gap: 12px;
+    margin-top: 18px;
+    width: 327px;
+    height: 48px;
+    border-radius: 6px;
+    border: 1px solid rgba(207, 216, 220, 1);
+    margin-left: 15px;
+    background-color: linear-gradient(0deg, #CFD8DC, #CFD8DC),
+linear-gradient(0deg, #FFFFFF, #FFFFFF);
+}
+.line2{
+  width: 134px;
+height: 5px;
+top: 21px;
+border-radius: 12px ;
+left: 120px;
+background: rgba(13, 21, 30, 1);
+border: #000;
+margin-top: 40px;
+}
+.textarea{
+  width: 327px;
+height: 170px;
+top: 5125px;
+left: 24px;
+gap: 12px;
+margin-top: 18px;
+border-radius: 6px;
+border: 1px solid rgba(207, 216, 220, 1);
+margin-left: 15px;
+background-color: linear-gradient(0deg, #CFD8DC, #CFD8DC),
+linear-gradient(0deg, #FFFFFF, #FFFFFF);
+}
+
+.lastbutton {
+  width: 142px;
+  height: 48px;
+  top: 5317px;
+  left: 24px;
+  padding: 12px 16px 12px 16px;
+  border-radius: 8px;
+  border: #344563;
+  background: rgba(255, 255, 255, 1);
+  margin-left: 15px;
+  margin-top: 12px;
+}  
+.btext {
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: rgba(57, 109, 242, 1);
+  white-space: nowrap;
+}
