--- a/style.css
+++ b/style.css
@@ -27,8 +27,6 @@
     top: 71px;
     padding: 289px, 260px, 289px, 260px;
     margin-bottom: 5%;
-
-    /* border: 1px solid rgb(27, 90, 121); */
   }
 }
 
@@ -64,7 +62,7 @@
 }
 
 .hamburger div {
-  width: 20px; /* Reduce width to fit */
+  width: 20px; 
   height: 2px;
   background-color: rgba(96, 112, 255, 1);
   margin: 3px 0;
@@ -72,7 +70,6 @@
   display: block;
 }
 
-/* Desktop styles */
 @media (min-width: 768px) {
   .hamburger {
     display: flex;
@@ -115,26 +112,8 @@
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
-  line-height: 20px; /* 133.333% */
+  line-height: 20px; 
 }
-
-
-/* .hamburger::before {
-    content: "Portfolio About Contact";
-    display: inline-block;
-    font-family: 'Poppins', sans-serif;
-    line-height: 20px;
-    top: 16px;
-    left: 1039px;
-    gap: 8px;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: 0em;
-    text-align: center;
-
-  }
-} */
 
 .toolbar {
   display: flex;
@@ -185,7 +164,7 @@
   margin-left: 10px;
   font-family: 'Poppins', sans-serif;
 
-  /* width: 327px; */
+
   height: 150px;
   color: rgba(23, 43, 77, 1);
   display: flex;
@@ -262,14 +241,14 @@
 
 .icon {
   font-size: 24px;
-  margin: 0 5px; /* Adjust spacing between icons */
+  margin: 0 5px; 
   color: rgba(80, 95, 121, 1);
   text-decoration: none;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr; /* Single column layout for mobile */
+  grid-template-columns: 1fr;
   gap: 2rem;
   padding: 2rem;
   background: #f7f7f9;
@@ -295,12 +274,12 @@
   padding: 1rem;
   border-radius: 8px;
   max-width: 50%;
-  overflow: hidden; /* Ensure the image doesn't overflow */
+  overflow: hidden;
 }
 
 .snapshot {
-  max-width: 100%; /* Make the image responsive */
-  height: auto; /* Auto-adjust height */
+  max-width: 100%; 
+  height: auto; 
   border-radius: 8px;
 }
 
@@ -358,16 +337,16 @@
   background-color: #4053fc;
 }
 
-/* Media query for desktop screens (greater than or equal to 768px) */
+
 @media (max-width: 768px) {
   .card {
-    flex-direction: column; /* Stack elements vertically on smaller screens */
-    height: auto; /* Allow height to adjust based on content */
+    flex-direction: column; 
+    height: auto; 
   }
 
   .imagecontainer,
   .Block {
-    max-width: 100%; /* Allow both to take full width on smaller screens */
+    max-width: 100%; 
   }
 }
 
@@ -397,7 +376,6 @@ li span {
   color: #6070ff;
 }
 
-/* Keyframes for card animation */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -410,7 +388,6 @@ li span {
   }
 }
 
-/* Apply animation to cards one by one */
 .card,
 .cardtwo {
   width: 1100px;
@@ -425,7 +402,6 @@ li span {
   animation: fadeIn 1s ease-in forwards;
 }
 
-/* Delay the animation for the second card */
 .cardtwo {
   animation-delay: 0.5s;
 }
@@ -523,10 +499,10 @@ li span {
 }
 
 .skill-set {
-  order: 2; /* Move skill-set to the left */
+  order: 2; 
 }
 
-/* Media query for desktop screens (greater than or equal to 768px) */
+
 @media (min-width: 768px) {
   .about-me {
     flex-direction: row;
@@ -544,13 +520,13 @@ li span {
 }
 
 .langlist {
-  display: flex; /* Use flexbox to create a horizontal layout */
-  justify-content: space-between; /* Distribute the space between elements evenly */
-  align-items: center; /* Align items vertically in the center */
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center; 
 }
 
 .frame2 {
-  flex: 0 0 calc(33.33% - 20px); /* Each item takes up 33.33% of the container width with spacing */
+  flex: 0 0 calc(33.33% - 20px); 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -560,18 +536,18 @@ li span {
   height: 100px;
   padding: 12px, 12px, 20px, 12px;
   border-radius: 8px;
-  justify-content: center; /* Vertically center content */
+  justify-content: center; 
 }
 
 .image {
-  max-width: 100%; /* Make sure the images are not wider than their containers */
+  max-width: 100%;
   display: flex;
   align-items: center;
   text-align: center;
 }
 
 .langtext {
-  margin-top: 0.5rem; /* Add some space between the image and text */
+  margin-top: 0.5rem; 
 }
 
 .contactcontainer {
@@ -582,8 +558,8 @@ li span {
   background-size: cover;
   background-position: cover, top left;
   background-repeat: no-repeat, repeat;
-  padding: 0; /* Remove padding */
-  text-align: center; /* Center content on small screens */
+  padding: 0; 
+  text-align: center; 
 }
 
 .contact {
@@ -601,7 +577,7 @@ li span {
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-  text-align: center; /* Center text on small screens */
+  text-align: center;
 }
 
 .maintext {
@@ -612,7 +588,7 @@ li span {
   letter-spacing: 0;
   color: #ebebff;
   margin-top: 20px;
-  text-align: center; /* Center text on small screens */
+  text-align: center; 
 }
 
 .forminput,
@@ -627,13 +603,13 @@ li span {
 
 .forminput,
 .textarea {
-  height: 48px; /* Keep height consistent for both input and textarea */
+  height: 48px; 
   border-radius: 6px;
   border: 1px solid rgba(207, 216, 220, 1);
   background-color:
     linear-gradient(0deg, #cfd8dc, #cfd8dc),
     linear-gradient(0deg, #fff, #fff);
-  margin-top: 20px; /* Adjusted margin for better centering */
+  margin-top: 20px; 
 }
 
 .line2 {
@@ -682,32 +658,31 @@ li span {
   white-space: wrap;
 }
 
-/* Media query for phone screens (max-width: 480px) */
 @media screen and (max-width: 480px) {
-  /* Adjust styles for phone screens here */
+ 
   .contactcontainer {
-    width: 100%; /* Make the container full width */
-    padding: 0 10px; /* Add some padding for better spacing */
+    width: 100%; 
+    padding: 0 10px;
   }
 
   .contact {
-    font-size: 24px; /* Adjust font size for smaller screens */
+    font-size: 24px;
   }
 
   .contact-section {
-    max-width: 100%; /* Make the section full width */
-    margin-top: 30px; /* Adjust margin for better spacing */
+    max-width: 100%; 
+    margin-top: 30px; 
   }
 
   .maintext {
-    font-size: 16px; /* Adjust font size for smaller screens */
+    font-size: 16px; 
   }
 
   .forminput,
   .textarea,
   .lastbutton {
-    width: 100%; /* Make form elements full width */
-    max-width: 100%; /* Limit maximum width */
+    width: 100%; 
+    max-width: 100%; 
   }
 }
 
