updating images link

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .background {
-  background-image: url('./back.png');
+  background-image: url('back.png');
   background-size: contain;
   height: 587.15px;
   border: 1px solid rgb(252, 252, 252);
@@ -20,7 +20,7 @@
 
 @media (min-width: 768px) {
   .background {
-    background-image: url('./headerback.png');
+    background-image: url('headerback.png');
     background-size: cover;
     width: 1397.4px;
     height: 721.46px;
@@ -550,7 +550,7 @@ li span {
   width: 1300px;
   top: 5500px;
   height: auto;
-  background-image: url(./shapesback.png), url(./contactback.png);
+  background-image: url(shapesback.png), url(contactback.png);
   background-size: cover;
   background-position: cover, top left;
   background-repeat: no-repeat, repeat;
